--- a/biddora-backend/Dockerfile
+++ b/biddora-backend/Dockerfile
@@ -1,10 +1,23 @@
-FROM maven:3.9.2-eclipse-temurin-17 AS build
-WORKDIR /app
-COPY pom.xml .
-COPY src ./src
-RUN mvn clean package -DskipTests
+FROM maven:3.9.9-eclipse-temurin-17 AS build
 
-FROM eclipse-temurin:17-jdk-alpine
 WORKDIR /app
-COPY --from=build /app/target/biddora-backend.jar biddora-backend.jar
-ENTRYPOINT ["java", "-jar", "biddora-backend.jar"]
+
+# Copy Maven descriptor and resolve dependencies
+COPY pom.xml .
+RUN mvn -B dependency:go-offline
+
+# Copy source and build application
+COPY src ./src
+RUN mvn -B clean package -DskipTests
+
+FROM eclipse-temurin:17-jre-alpine
+
+WORKDIR /app
+
+# Copy the built Spring Boot jar
+COPY --from=build /app/target/biddora-backend.jar app.jar
+
+# Expose application port (matches server.port in application.properties)
+EXPOSE 8081
+
+ENTRYPOINT ["java", "-jar", "app.jar"]
